# FractalGenerator

./: .gitignore  cool_functions.txt  pyproject.toml
fractalGAN/.ipynb_checkpoints/: fractal_generator-checkpoint.py
fractal_generator/: fractal_dataset.py  fractal_generator.py
fractal_generator/.ipynb_checkpoints/: fractal_dataset-checkpoint.py
notebooks/: CoolFractals.ipynb  GenerateBigDataset.ipynb  RunModel.ipynb
notebooks/.ipynb_checkpoints/: RunModel-checkpoint.ipynb
