[tool.poetry]
name = "fractalgan"
version = "0.1.0"
description = ""
authors = ["Gabriel Lopez"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "^1.20.1"
pathlib = "^1.0.1"
matplotlib = "^3.3.4"
numba = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
